{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 7,
  "lineage": "37ba14de-eac3-dcd2-cea7-4ab57f8ed42d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "academy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834948575491:internet-gateway/igw-07fa6ce668313f2cf",
            "id": "igw-07fa6ce668313f2cf",
            "owner_id": "834948575491",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraops",
              "Name": "terraops-staging-igw"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraops",
              "Name": "terraops-staging-igw"
            },
            "vpc_id": "vpc-0e01a1bdc710eeaf0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.academy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834948575491:route-table/rtb-030fdc103b5d38306",
            "id": "rtb-030fdc103b5d38306",
            "owner_id": "834948575491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fa6ce668313f2cf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraops",
              "Name": "terraops-staging-public-rt"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraops",
              "Name": "terraops-staging-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e01a1bdc710eeaf0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.academy",
            "aws_vpc.academy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf63f690e8cad72e",
            "route_table_id": "rtb-030fdc103b5d38306",
            "subnet_id": "subnet-0a0595312d955c036"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.academy",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.academy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "academy_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834948575491:security-group/sg-0998ae907689d3e6f",
            "description": "Academy Control API access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0998ae907689d3e6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraops-staging-academy-api",
            "name_prefix": "",
            "owner_id": "834948575491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraops",
              "Name": "terraops-staging-academy-api"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraops",
              "Name": "terraops-staging-academy-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e01a1bdc710eeaf0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.academy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834948575491:subnet/subnet-0a0595312d955c036",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0595312d955c036",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "834948575491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraops",
              "Name": "terraops-staging-public"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraops",
              "Name": "terraops-staging-public"
            },
            "vpc_id": "vpc-0e01a1bdc710eeaf0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.academy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "academy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:834948575491:vpc/vpc-0e01a1bdc710eeaf0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0b3dc706832fecd86",
            "default_route_table_id": "rtb-030db3caf74bf0069",
            "default_security_group_id": "sg-0c84a9c20bc186afc",
            "dhcp_options_id": "dopt-09db416f5b457deea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e01a1bdc710eeaf0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030db3caf74bf0069",
            "owner_id": "834948575491",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraops",
              "Name": "terraops-staging-vpc"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraops",
              "Name": "terraops-staging-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}